fix: focus style bleeding (#403)
* fix: focus rule as mixin in shared styling file

* fix(accordion): adding focus rule

* fix(breadcrums): adding focus rule

* fix(dropdown): adding focus rule

* fix(footer): adding focus rule

* fix(header): adding focus rule

* fix(link): adding focus rule

* fix(modal): adding focus rule + use button for button, not span

* fix(side-menu): adding focus rule

* fix(table): adding focus rule

* fix(tabs): adding focus rule

* fix(theme): single quotes instead of double

--- a/components/src/components/theme/theme.scss
+++ b/components/src/components/theme/theme.scss
@@ -28,11 +28,6 @@
 @import '../slider/slider.scss';
 @import '../../helpers/_utility-classes.scss';
 
-* :focus {
-  outline: 2px solid var(--sdds-blue-400);
-  outline-offset: -2px;
-}
-
 html.#{$prefix},
 body.#{$prefix},
 .#{$prefix}-body {
